[tool.poetry]
name = "echo-server"
version = "0.1.0"
description = "Logs requests & their params/body details"
authors = ["Emmanuel Apau <kave@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
falcon = "^2.0.0"
python-dotenv = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
